--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<style>
+			.container{
+				font-family: "微软雅黑";
+				width:960px;
+				margin: 0 auto;
+				text-align: center;
+			}
+			
+			a{
+				text-decoration: none;
+				color:#8ff999;
+			}
+
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h1>Hello World</h1>
+			<p>
+				<a href="sina/index.html">微博</a>(less)
+			</p>
+		</div>
+	</body>
+</html>
